--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="modulo roxo-escuro">
                 <h3>Modulo 09</h3>
                     <ul>
-                        <li><a href="#">Exercicio A</a></li>
+                        <li><a href="#">Exercicio 2.1</a></li>
                         <li><a href="#">Exercicio B</a></li>
                         <li><a href="#">Exercicio C</a></li>
                     </ul>
